--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,25 @@
 <h1>
   {{title}}
 </h1>
+<!--<div class=""> <label>id: </label>{{hero.id}}</div>-->
+<ul class="heroes">
+  <li *ngFor="let hero of heroes"
+    [class.selected]="hero === selectedHero"
+    (click)="onSelect(hero)">
+    <span class="badge">{{hero.id}}</span> {{hero.name}}
+  </li>
+</ul>
+
+
+<div *ngIf="selectedHero">
+   <!--<label>Name: </label>
+   <input [(ngModel)] = "hero.name" placeholder="name">-->
+
+    <h2>{{selectedHero.name}}details!</h2>
+    <div class=""><label> id: </label>{{selectedHero.id}}</div>
+    <div class="">
+      <label> name :</label>
+      <input [(ngModel)] = "selectedHero.name" placeholder="name">
+    </div>
+
+</div>
