--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,15 @@
-<h1>
-  {{title}}
-</h1>
+<div class="container">
+  <div class="jumbotron">
+    <h1>
+      {{title}}
+    </h1>
+  </div>
+</div>
+<h2>{{hero.name}}</h2>
+<div class="">
+  <label> id: </label>{{hero.id}}
+</div>
+<div>
+  <label>name: </label>
+  <input [(ngModel)]="hero.name" placeholder="name">
+</div>
