--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <div class="container">
   <div class="jumbotron">
     <h1>
@@ -6,37 +5,11 @@
     </h1>
   </div>
 </div>
-<h2>{{hero.name}}</h2>
-<div class="">
-  <label> id: </label>{{hero.id}}
-</div>
-<div>
-  <label>name: </label>
-  <input [(ngModel)]="hero.name" placeholder="name">
-=======
-<h1>
-  {{title}}
-</h1>
-<!--<div class=""> <label>id: </label>{{hero.id}}</div>-->
+<h2>My Heroes</h2>
+
 <ul class="heroes">
-  <li *ngFor="let hero of heroes"
-    [class.selected]="hero === selectedHero"
-    (click)="onSelect(hero)">
+  <li *ngFor="let hero of heroes" [class.selected]="hero == selectedHero" (click)="onSelect(hero)">
     <span class="badge">{{hero.id}}</span> {{hero.name}}
   </li>
 </ul>
-
-
-<div *ngIf="selectedHero">
-   <!--<label>Name: </label>
-   <input [(ngModel)] = "hero.name" placeholder="name">-->
-
-    <h2>{{selectedHero.name}}details!</h2>
-    <div class=""><label> id: </label>{{selectedHero.id}}</div>
-    <div class="">
-      <label> name :</label>
-      <input [(ngModel)] = "selectedHero.name" placeholder="name">
-    </div>
-
->>>>>>> 7ab2d2d31a58d85e789fb481038b5ba054292aae
-</div>
+<hero-detail [hero]="selectedHero"></hero-detail>
